--- a/config/database.yml
+++ b/config/database.yml
@@ -15,10 +15,8 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: Ocular_development
-  pool: 5
-  username: appacademy
-  password:
+  database: lookbook_development
+  host: localhost
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -38,18 +36,3 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  adapter: postgresql
-  encoding: unicode
-  database: Ocular_test
-  pool: 5
-  username: appacademy
-  password:
-
-production:
-  adapter: postgresql
-  encoding: unicode
-  database: Ocular_production
-  pool: 5
-  username: appacademy
-  password:
