--- a/config/database.yml
+++ b/config/database.yml
@@ -15,8 +15,10 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: lookbook_development
+  database: Ocular_development
   host: localhost
+  username: appacademy
+  password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
