--- a/config/database.yml
+++ b/config/database.yml
@@ -15,10 +15,8 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: Ocular_development
+  database: lookbook_development
   host: localhost
-  username: appacademy
-  password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
