--- a/config/database.yml
+++ b/config/database.yml
@@ -18,6 +18,12 @@ development:
   database: lookbook_development
   host: localhost
 
+test:
+  adapter: postgresql
+  encoding: unicode
+  database: lookbook_test
+  host: localhost
+
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
